Fixed spacing

--- a/_sass/_styleguide.scss
+++ b/_sass/_styleguide.scss
@@ -31,7 +31,7 @@ header {
     font-weight: 600;
     font-size: 1em;
     margin: 2.65em 0 2em .75em;
-    @media only screen and (min-width: 64.063em) {font-size: 1.75em; margin: 1.15em 0 0 .75em;}
+    @media only screen and (min-width: 64.063em) {font-size: 1.75em; margin: 1.15em 0 0 .55em;}
     line-height: 1em;
 
     vertical-align: top;
